# otus_homework

./: .gitignore  CMakeLists.txt  README.md  annotated.html  classes.html  dir_000000_000001.html  dir_000001_000004.html  dir_000002_000004.html  dir_000003_000004.html  dir_0f2339d204149e590ec376b2c2ae3818.html  dir_0f2339d204149e590ec376b2c2ae3818_dep.map  dir_0f2339d204149e590ec376b2c2ae3818_dep.md5  dir_36df885461d6bd14211edf06510d126c.html  dir_36df885461d6bd14211edf06510d126c_dep.map  dir_36df885461d6bd14211edf06510d126c_dep.md5  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_6bbbd9c93e74a083e0494ef13388fec7.html  dir_6bbbd9c93e74a083e0494ef13388fec7_dep.map  dir_6bbbd9c93e74a083e0494ef13388fec7_dep.md5  dir_94aa97ec832d18dd058d7ebcf991fde1.html  dir_94aa97ec832d18dd058d7ebcf991fde1_dep.map  dir_94aa97ec832d18dd058d7ebcf991fde1_dep.md5  dir_aee343b7c16de696289ede2c66e1099c.html  dir_aee343b7c16de696289ede2c66e1099c_dep.map  dir_aee343b7c16de696289ede2c66e1099c_dep.md5  files.html  functions.html  functions_func.html  functions_rela.html  functions_vars.html  globals.html  globals_func.html  graph_legend.html  hierarchy.html  index.html  inherit_graph_0.map  inherit_graph_0.md5  inherit_graph_1.map  (+11 more)
.github/workflows/: homework1_release.yml  homework2_release.yml  homework3_release.yml  homework4_release.yml  homework5_release.yml  homework6_release.yml  homework7_release.yml  release.yml
d0/d08/: CloseDocumentAction_8h.html  CloseDocumentAction_8h_source.html
d0/d11/: VectorEditorController_8h.html  VectorEditorController_8h_source.html
d0/d19/: classIUserAction__inherit__graph.map  classIUserAction__inherit__graph.md5
d0/d6b/: classVectorDocument.html  classVectorDocument_ae49a62baf029ef492bdaaf32b0893f6f_cgraph.map  classVectorDocument_ae49a62baf029ef492bdaaf32b0893f6f_cgraph.md5
d0/d71/: classIUserAction-members.html
d0/d8b/: classActionComposition__coll__graph.md5
d0/d8e/: classVectorDocument__coll__graph.map  classVectorDocument__coll__graph.md5
d0/da4/: VectorDocument_8h__dep__incl.map  VectorDocument_8h__dep__incl.md5
d0/dac/: classDeletePrimitiveAction__coll__graph.md5
d0/dd9/: classOpenDocumentAction-members.html
d0/ddf/: classCreatePrimitiveAction-members.html
d0/de4/: VectorEditorView_8h__dep__incl.map  VectorEditorView_8h__dep__incl.md5
d1/d29/: OpenDocumentAction_8h__incl.map  OpenDocumentAction_8h__incl.md5
d1/d8d/: SelectPrimitiveAction_8h.html  SelectPrimitiveAction_8h_source.html
d1/d94/: IGraphPrimitive_8h__incl.map  IGraphPrimitive_8h__incl.md5
d2/d19/: classIGraphElement.html
d2/d1f/: classCreateDocumentAction__inherit__graph.map  classCreateDocumentAction__inherit__graph.md5
d2/d2b/: Line_8cpp__incl.map  Line_8cpp__incl.md5
d2/d62/: VectorEditorModel_8h__incl.map  VectorEditorModel_8h__incl.md5
d2/d69/: classCreatePrimitiveAction__inherit__graph.map  classCreatePrimitiveAction__inherit__graph.md5
d2/da2/: SaveDocumentToFile_8cpp.html  SaveDocumentToFile_8cpp_source.html
d2/de6/: classDeletePrimitiveAction-members.html
d2/dfa/: classVectorEditorController__coll__graph.map  classVectorEditorController__coll__graph.md5
d3/d30/: VectorEditorModel_8cpp.html  VectorEditorModel_8cpp_source.html
d3/d3f/: Point_8cpp.html  Point_8cpp_source.html
d3/d50/: IUserAction_8h.html  IUserAction_8h_source.html
d3/d90/: ActionComposition_8cpp__incl.map  ActionComposition_8cpp__incl.md5
d3/db0/: Rectangle_8h__dep__incl.map  Rectangle_8h__dep__incl.md5
d3/dee/: SelectPrimitiveAction_8h__dep__incl.map  SelectPrimitiveAction_8h__dep__incl.md5
d4/d12/: classLine__inherit__graph.map  classLine__inherit__graph.md5
d4/d36/: classSaveDocumentToFile__coll__graph.map  classSaveDocumentToFile__coll__graph.md5
d4/d4f/: classIUserAction__coll__graph.map  classIUserAction__coll__graph.md5
d4/d58/: CreatePrimitiveAction_8h__incl.map  CreatePrimitiveAction_8h__incl.md5
d4/d6d/: VectorEditorView_8h.html  VectorEditorView_8h_source.html
d4/d74/: SaveDocumentToFile_8h__incl.map  SaveDocumentToFile_8h__incl.md5
d4/dae/: Line_8cpp.html  Line_8cpp_source.html
d4/de5/: Point_8h.html  Point_8h_source.html
d5/d2e/: VectorEditorModel_8cpp__incl.map  (+1 more)
homework1/: CMakeLists.txt
homework2/: CMakeLists.txt
homework2/src/: CMakeLists.txt
homework3/: CMakeLists.txt
homework3/include/: custom_allocator.h  custom_collection.h
homework3/lib/: CMakeLists.txt  custom_collection.h
homework3/src/: CMakeLists.txt  main.cpp
homework3/tests/: CMakeLists.txt  collectionTests.cpp  helloworld_test.cpp
homework4/: CMakeLists.txt  Doxyfile
homework4/src/: CMakeLists.txt  main.cpp
homework4/tests/: CMakeLists.txt  ipToStringTests.cpp
homework5/: CMakeLists.txt  Doxyfile
homework5/src/: CMakeLists.txt  IGraphElement.h  VectorEditorController.cpp  VectorEditorController.h  VectorEditorView.cpp  VectorEditorView.h  main.cpp
homework5/src/Actions/: ActionComposition.cpp  ActionComposition.h  IUserAction.h
homework5/src/Actions/DocumentActions/: CloseDocumentAction.cpp  CloseDocumentAction.h  CreateDocumentAction.cpp  CreateDocumentAction.h  OpenDocumentAction.cpp  OpenDocumentAction.h  SaveDocumentToFile.cpp  SaveDocumentToFile.h
homework5/src/Actions/PrimitivesActions/: CreatePrimitiveAction.h  DeletePrimitiveAction.cpp  DeletePrimitiveAction.h  SelectPrimitiveAction.cpp  SelectPrimitiveAction.h
homework5/src/Models/: IGraphPrimitive.h  Point.h  VectorDocument.cpp  VectorDocument.h  VectorEditorModel.cpp  VectorEditorModel.h
homework5/src/Models/GraphPrimitives/: Line.cpp  Line.h  Rectangle.cpp  Rectangle.h
homework5/src/Models/GrapthPrimitives/: Line.h  Rectangle.h
homework6/: CMakeLists.txt
homework6/src/: CMakeLists.txt  main.cpp
homework6/tests/: CMakeLists.txt  sparsematrix_test.cpp
homework7/: CMakeLists.txt
homework7/tests/: CMakeLists.txt  bulk_test.cpp
lib/: CMakeLists.txt  helloworld.cpp  ipAddres.cpp  ipAddres.h
src/: main.cpp
tests/: CMakeLists.txt  ip_filter.tsv:Zone.Identifier  ipaddr_test.cpp
(+189 files in other folders)
